--- a/index.html
+++ b/index.html
@@ -7,3 +7,5 @@ title: Home
 
     <h1>nama: khairatil aini</h1>
     <p>Deskriksi diri: saya berasal dari krung mane, sekarang saya kuliah di politeknik negeri lhokseumawe sebagai mahasiswa, saya ambil jurasan teknologi informasi dan komputer</p>
+
+    <button onclick="myFunction()">Jangan diklik ya!</button>
