--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
 
 
 
-    <h1>nama: khairatil aini</h1>
-    <p>Deskriksi diri: saya berasal dari krung mane, sekarang saya kuliah di politeknik negeri lhokseumawe sebagai mahasiswa, saya ambil jurasan teknologi informasi dan komputer</p>
+    <h1>Nama: Khairatil Aini</h1>
+    <p>Deskripsi diri: saya berasal dari krung mane, sekarang saya kuliah di politeknik negeri lhokseumawe sebagai mahasiswa, saya mengambil jurasan teknologi informasi dan komputer.</p>
 
     <button onclick="myFunction()">Jangan diklik ya!</button>
